# Simulacrum

./: .gitignore  Cargo.toml  IERC20.sol  LendingPlatform.sol  README.md  Shuttle.toml  Simulacrum.pptx  UserRegistry.sol  hardhat.config.js  package-lock.json  package.json
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json
.states/vm-prague/: state.json
artifacts/: LendingPlatform.json  LendingPlatform_metadata.json  MockUSDC.json  MockUSDC_metadata.json  testSuite.json  testSuite_metadata.json
blockchain_network/contracts/: LendingPlatform.sol
blockchain_network/tests/: LendingPlatform.test.js
contracts/: LendingPlatform.sol  MockUSDT.sol
migrations/: 20250709195913_user_table.sql  20250709204518_test_user.sql
src/: auth.rs  blockchain.rs  db.rs  db_models.rs  main.rs  models.rs  routes.rs
src/models/: common.rs  market.rs
src/routes/: create_loan.rs  dashboard.rs  index.rs  marketplace.rs
static/css/: base.css  create_loan.css  dashboard.css  index.css  marketplace.css
static/js/: base.js  contract.js  create_loan.js  dashboard.js  index.js  marketplace.js
templates/: base.html  create_loan.html  dashboard.html  index.html  loans.html  marketplace.html
tests/: LendingPlatform_test.sol
